# arm_real

./: README.md  gitcfg.sh  notes.md
altered_files/: rg2_gripper.urdf copy.xacro  ur_moveit.urdf copy.xacro  ur_r85.urdf copy.xacro  ur_real.urdf copy.xacro
r85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r85_moveit_config/config/: moveit_controllers.yaml  name.srdf  name.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
r85_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  name.srdf  name.urdf.xacro  ompl_planning.yaml  sensors_3d.yaml
real_moveit_config/ik_cache/: nameur_manipulator_base_linktool0_10000_1.000000_4.000000.ikcache
sim_moveit_config/: .setup_assistant  package.xml
sim_moveit_config/config/: name.srdf  ros2_controllers.yaml
ur_mtc/: CMakeLists.txt  package.xml
ur_mtc/config/: moveit.rviz
ur_mtc/include/ur_mtc/: perception.hpp
ur_mtc/launch/: arm.launch.py  controllers_real.launch.py  gripper.launch.py  setup_real.launch.py  setup_sim.launch.py  setup_test.launch.py  test.launch.py  test_c2.launch.py  test_nc.launch.py  test_nc2.launch.py  test_ng.launch.py  test_p.launch.py
ur_mtc/src/: gripper.cpp  gripper_action.cpp  mtc_c2.cpp  mtc_final.cpp  mtc_nc2.cpp  mtc_ng_const.cpp  mtc_no_const.cpp  mtc_test.cpp  mtc_testOLD.cpp  mtc_test_exp.cpp  mtc_test_ng.cpp
